changed from js to ts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Xelanybor/ow-scenario-creator-test/issues"
   },
-  "homepage": "https://github.com/Xelanybor/ow-scenario-creator-test#readme"
+  "homepage": "https://github.com/Xelanybor/ow-scenario-creator-test#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  }
 }
