--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   },
   "homepage": "https://github.com/Xelanybor/ow-scenario-creator-test#readme",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
